# forums

./: .gitignore  Cargo.toml
src/: main.rs  models.rs  storage.rs
web/: create_post.html  create_post.js  db  index.css  index.html  index.js  login.html  post.css  post.html  post.js  style.css
web/js/: create_post.js  post.js
web/style/: create_post.css  index.css  post.css
