[package]
name = "forums"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foxhole = { git = "http://github.com/kay-conte/foxhole-rs" }
rusqlite = "0.29.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4"] }
